--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,13 @@ button:active {
   border-color: #33059e;
 }
 
+button:disabled, button:disabled:hover, button:disabled:active {
+  background-color: #ccc;
+  color: black;
+  border-color: #ccc;
+  cursor: pointer;
+}
+
 .form-actions {
   text-align: right;
 }
